# hn

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.base.json  turbo.json
apps/tui/: Cargo.toml  package.json
apps/tui/src/: main.rs
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  hn.ts  styles.css
crates/hn-core/: Cargo.toml
crates/hn-core/src/: lib.rs
crates/hn-wasm/: Cargo.toml
crates/hn-wasm/src/: lib.rs
